2007-11-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/componentview.py
	(ComponentView.logCategory): Satisfy the swedish mafia.

	* flumotion/admin/multi.py (MultiAdminModel.removeManager): Avoid
	disconnecting from signals twice.

	* flumotion/manager/component.py (FeedMap.__init__)
	(FeedMap.componentAttached, FeedMap.componentDetached)
	(FeedMap._recalc, FeedMap.getFeedersForEaters)
	(FeedMap.getEatersForFeeders): Maintain a cache of eater-feeder
	mappings, invalidated when components log in or out, keyed by full
	feed ID. Recalculate the cache in a single O(N) pass. Don't add
	mappings for feeders that are not present.
	(ComponentHeaven._connectEatersAndFeeders): No need to deal with
	the feeder-not-present case.

2007-11-07  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/test_options.py (TestOptions): Make sure to turn
	all logging of after running the OptionParser tests.
	Also remove a whole copy of the file.
	
2007-11-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py (ComponentAvatar.getWorker):
	Remove, there was already getWorkerName.
	(ComponentHeaven.feedServerAvailable): Fix crack.
	(FeedMap): Factor getEatersForFeeders and getFeedersForEaters into
	a separate object -- will allow some memoization opportunities.
	(ComponentHeaven.__init__):
	(ComponentHeaven._connectEatersAndFeeders): Make and use the
	feedMap.
	(ComponentAvatar.onShutdown): Notify the heaven on logout so that
	it can e.g. reconnect other components that eat from virtual
	feeds.
	(ComponentHeaven.componentAttached): Take the avatar directly.
	Change some warnings into asserts.
	(ComponentHeaven.componentDetached): New function. Notify the feed
	map, and reconnect any components that need to be reconnected.

2007-11-07  Michael Smith <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/resources.py:
	  Import fcntl in global scope as well. There's no reason to do this
	  locally, and it's somewhat of a hot path (client connection).
